calico-policies/private-network-isolation/calico-v3/allow-all-workers-private.yaml
# This policy limits communication on the private network to worker nodes within the cluster.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-all-workers-private
spec:
  egress:
  - action: Allow
    destination:
      selector: ibm.role == 'worker_private'
    source: {}
  - action: Allow
    destination:
      nets:
        # Allows communication to pod IPs
      - 172.30.0.0/16
    source: {}
  ingress:
  - action: Allow
    destination: {}
    source:
      selector: ibm.role == 'worker_private'
  order: 1800
  selector: ibm.role == 'worker_private'
  types:
  - Egress
  - Ingress
