calico-policies/private-network-isolation/calico-v3/allow-dns-10250-2049.yaml
# This policy opens port 10250 for VPN communication between master and workers, the DNS port
# (53), and port 2049 for communication with NFS file servers.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-dns-10250
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 2049
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 2049
    protocol: TCP
    source: {}
  ingress:
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_private'
  types:
  - Ingress
  - Egress
