calico-policies/private-network-isolation/calico-v3/allow-egress-pods.yaml
# This policy opens port 10250 for VPN communication through kubelet and opens DNS port (53).

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      selector: projectcalico.org/orchestrator == 'k8s'
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
