calico-policies/private-network-isolation/calico-v3/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of your cluster
# to the cluster master through the private service endpoint. Note that you must allow outgoing
# traffic on TCP/UDP port range 20000-32767 and port 443 for all of the zones within the region.
# The example nets in this policy are for US South.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Example nets for US South
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.71/32
      - 166.9.15.72/32
      - 166.9.15.73/32
      - 166.9.15.74/32
      - 166.9.15.75/32
      - 166.9.15.76/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Example nets for US South
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.71/32
      - 166.9.15.72/32
      - 166.9.15.73/32
      - 166.9.15.74/32
      - 166.9.15.75/32
      - 166.9.15.76/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
