calico-policies/private-network-isolation/calico-v3/allow-sys-mgmt-private.yaml
# This policy allows incoming connections for specific IBM Cloud infrastructure (SoftLayer)
# systems that are used to manage the worker nodes. Note that you must add nets for dal01,
# dal10, wdc04, and if your cluster is in the Europe geography, ams01.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-sys-mgmt-private
spec:
  ingress:
  - action: Allow
    destination: {}
    source:
      nets:
      # Required nets: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Required net for Europe: ams01
      - 10.2.64.0/20
      # Add nets for zones in your cluster
      -
  order: 1950
  selector: ibm.role == 'worker_private'
  types:
  - Ingress
