calico-policies/private-network-isolation/calico-v3/allow-vrrp-private.yaml
# This policy opens the VRRP protocol, which manages load balancing.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-vrrp-private
spec:
  ingress:
  - action: Allow
    destination: {}
    protocol: 112
    source: {}
  order: 1500
  selector: ibm.role == 'worker_private'
  types:
  - Ingress
